# file-scraper

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/file_scraper/: default.json  file_scraper.py  main.py
src/file_scraper/reports/: default.html
src/file_scraper/templates/: default.json
src/file_scraper/utils/: array.py  config.py  directory.py  file.py  general.py  grep.py  jquery.py  rabin.py  report.py  result.py  scrape.py  string.py  template.py  validate.py
